Fix welcome message scrolling on small screens

--- a/css/index.css
+++ b/css/index.css
@@ -56,6 +56,7 @@ main {
 .welcome {
   font-size: 20px;
   grid-area: content;
+  overflow-y: auto;
   z-index: 1;
 }
 
